feat: День 3. Добавлен промпт менеджера по продажам автомобиля

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Простой агент GigaChat</h1>
+      <h1>Продавец поддержанных автомобилей</h1>
       <div id="chatbox"></div>
       <form id="chat-form">
         <input
