--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           />
         </div>
         <div>
-          Температура: 
+          Температура:
           <input
             type="number"
             id="temperatureInput"
@@ -34,7 +34,23 @@
           />
         </div>
         <button type="submit">Отправить</button>
+      </form>
     </div>
+
+    <div class="container">
+      <h2 id="progress-title">Исходящие токены - 0 / Входящие токены - 0</h2>
+
+      <div class="progress-container">
+        <div
+          class="progress-bar"
+          role="progressbar"
+          aria-valuemin="0"
+          aria-valuemax="100"
+          style="width: 0%"
+        ></div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
