feat: День 9. Сжатие истории диалога.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container" markdown="1">
-      <h1>Тест температуры</h1>
+      <h1>День 9: Сжатие истории диалога</h1>
       <div id="chatbox" ma></div>
       <form id="chat-form">
         <div>
@@ -27,10 +27,10 @@
             id="temperatureInput"
             min="0"
             max="2"
-            step="0.1"
+            step="0.01"
             placeholder="Задайте температуру..."
             required
-            value="0"
+            value="0.72"
           />
         </div>
         <button type="submit">Отправить</button>
