--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container" markdown="1">
-      <h1>День 9: Сжатие истории диалога</h1>
+      <h1>День 10. Внешняя память</h1>
       <div id="chatbox" ma></div>
       <form id="chat-form">
         <div>
